--- a/site/module 2 solution/css/styles.css
+++ b/site/module 2 solution/css/styles.css
@@ -4,7 +4,7 @@
 
 h1 {
 	 font-family: Helvetica, sans-serif;
-	 color: #000000 
+	 color: #fffb0d
 
 }
 body > h1 {
@@ -34,7 +34,7 @@ section > div {
 }
 section {
 	border:	1px solid black;
-	background-color: #00FF99;
+	background-color: #d60f0f;
 	width: 100%;
 	height: 200px;
 	font-family: Helvetica;
